--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,7 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+FindSimilarWorkItems/tschmiedlechner.find-similar-workitems-0.1.28.vsix
+
+**/*.vsix
+dist/
