--- a/FindSimilarWorkItems/FindSimilarWorkItems.csproj
+++ b/FindSimilarWorkItems/FindSimilarWorkItems.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>FindSimilarWorkItems</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TypeScriptToolsVersion>2.2</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>2.3</TypeScriptToolsVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort>44300</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
@@ -109,6 +109,6 @@
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.targets" Condition="Exists('$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.targets')" />
   <PropertyGroup>
-    <PreBuildEvent>typings install &amp;&amp; npm up --save-dev &amp;&amp; npm run build</PreBuildEvent>
+    <PreBuildEvent>typings install &amp;&amp; npm run build</PreBuildEvent>
   </PropertyGroup>
 </Project>
