--- a/FindSimilarWorkItems/package.json
+++ b/FindSimilarWorkItems/package.json
@@ -8,22 +8,23 @@
     "lint": "tslint -c tslint.json \"src/*.ts"
   },
   "devDependencies": {
-    "rimraf": "^2.5.4",
-    "tfx-cli": "^0.3.45",
-    "typescript": "^2.1.4",
     "cpx": "^1.5.0",
-    "ts-loader": "^2.0.0",
-    "tslint": "^4.3.1",
-    "tslint-loader": "^3.3.0",
-    "webpack": "^1.14.0"  
+    "rimraf": "^2.6.1",
+    "tfx-cli": "^0.3.49",
+    "ts-loader": "^2.3.3",
+    "tslint": "^4.5.1",
+    "tslint-loader": "^3.5.3",
+    "typescript": "2.3.1",
+    "webpack": "^1.15.0"
   },
   "dependencies": {
     "@types/jquery": "^2.0.34",
     "@types/q": "0.0.32",
-    "vss-web-extension-sdk": "^2.109.1",
-    "applicationinsights-js": "*"
+    "applicationinsights-js": "*",
+    "string-similarity": "^1.2.0",
+    "vss-web-extension-sdk": "^3.121.0"
   },
-  "name": "",
+  "name": "find-similar-workitems",
   "private": true,
   "version": "0.0.0"
 }
