--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@types/jquery": "^2.0.34",
     "@types/q": "0.0.32",
     "applicationinsights-js": "*",
+    "decode-html": "^1.0.2",
     "string-similarity": "^1.2.0",
+    "striptags": "^2.2.1",
     "vss-web-extension-sdk": "^3.121.0"
   },
   "name": "find-similar-workitems",
