--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "scripts": {
     "build": "npm run lint && npm run clean && webpack --progress --colors --config webpack.config.js --output-path ./dist -p",
     "postbuild": "npm run package",
-    "package": "tfx extension create  --rev-version",
-    "gallery-publish": "tfx extension publish --rev-version",
+    "package": "tfx extension create",
+    "gallery-publish": "tfx extension publish",
     "clean": "rimraf ./dist && rimraf ./*.vsix",
     "lint": "tslint -c tslint.json \"src/*.ts"
   },
